
   o edge.Trans
   New argument 'give.rmax' 

   o fvnames, plot.fv
   The symbol '.a' is now recognised. It stands for 'all function values'.

   o as.function.fv
   Argument 'extrapolate' can have length 1 or 2.

   o varblock
   New argument 'confidence' determines the confidence level.

   o $<-.fv
   This can now be used to add an extra column to an 'fv' object
   (previously it refused).

   o plot.fv
   Improved handling of 'shade' argument.

   o Kmeasure
   Now passes '...' arguments to as.mask()

   o Ksector
   Now allows start < 0.  
   New arguments 'units' and 'domain'.

   o pairorient
   New arguments 'units' and 'domain'.

   o eroded.areas
   New argument 'subset'

   o harmonise.fv, harmonise.im
   These are now methods for the new generic 'harmonise'

BUG FIXES

   o varblock
   Calculations were incorrect if more than one column of 
   edge corrections was computed. 
   [Bug introduced in spatstat 1.21-1, november 2010.]
   Fixed.

   o varblock
   Crashed if one of the quadrats contained no data points.
   Fixed.

   o lohboot
   Interval was calculated wrongly when global=TRUE and fun="Lest" or "Linhom".
   Fixed.

   o nnmark
   Crashed when at="points" if there was only a single column of marks.
   [Spotted by Shane Frank.]
   Fixed.

   o as.im.owin
   Crashed if X was a 1 x 1 pixel array.
   Fixed.

   o objects of class 'fv'
   Assigning a new value to names(x) or colnames(x) or dimnames(x)
   would cause the internal data format to become corrupted.
   Fixed.

   o to.grey, complementarycolour
   Did not work properly on 'colourmap' objects.
   Fixed.

   o Kest
   Ignored argument 'var.approx' if the window was a rectangle.
   Fixed.

   o rmh.ppm, rmhmodel.ppm
   Ignored the argument 'new.coef'.
   [Spotted by Sebastian Schutte]
   Fixed.

   o as.function.fv
   The meanings of 'extrapolate=TRUE' and 'extrapolate=FALSE' were swapped.
   Fixed.

   o varblock
   Handled the case 'fun=Lest' incorrectly.
   Fixed.
