@@ -117,7 +117,9 @@ useDynLib(spatstat,
 "locWpcfx",
 "locxprod",
 "maxnnd2",
+"maxPnnd2",
 "minnnd2",
+"minPnnd2",
 "nnd3D",
 "nndist2segs",
 "nndistsort",
